--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Kolonists.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Kolonists.cfg
@@ -1,8 +1,8 @@
 EXPERIENCE_TRAIT
 {
 	name = Kolonist
-	title = Kolonist
-	desc = Kolonists lack the specific technical skills of specialists, but make up for this by being able to boost all Kolonization stats simultaneously.
+	title = #LOC_USI_MKS_AstronautComplex_Kolonist
+	desc = #LOC_USI_MKS_AstronautComplex_Kolonist_desc
 
 	EFFECT
 	{
@@ -28,8 +28,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Miner
-	title = Miner
-	desc = Miners specialize in drill operation and also perform geology research.
+	title = #LOC_USI_MKS_AstronautComplex_Miner
+	desc = #LOC_USI_MKS_AstronautComplex_Miner_desc
 
 	EFFECT
 	{
@@ -49,8 +49,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Technician
-	title = Technician
-	desc = Technicians can operate industrial colony equipment as well as perform geology research.
+	title = #LOC_USI_MKS_AstronautComplex_Technician
+	desc = #LOC_USI_MKS_AstronautComplex_Technician_desc
 
 	EFFECT
 	{
@@ -70,8 +70,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Mechanic
-	title = Mechanic
-	desc = Mechanics can repair broken equipment as well as perform geology research.
+	title = #LOC_USI_MKS_AstronautComplex_Mechanic
+	desc = #LOC_USI_MKS_AstronautComplex_Mechanic_desc
 	
 	EFFECT
 	{
@@ -91,8 +91,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Biologist
-	title = Biologist
-	desc = Biologists are essential for operating basic agriculture and cultivation modules.  They can also perform scientific research.
+	title = #LOC_USI_MKS_AstronautComplex_Biologist
+	desc = #LOC_USI_MKS_AstronautComplex_Biologist_desc
 
 	EFFECT
 	{
@@ -112,8 +112,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Geologist
-	title = Geologist
-	desc = Geologists are able to operate bulk harvesters such as regolith sifters to extract valuable resources.  They can also perform geology research.
+	title = #LOC_USI_MKS_AstronautComplex_Geologist
+	desc = #LOC_USI_MKS_AstronautComplex_Geologist_desc
 
 	EFFECT
 	{
@@ -133,8 +133,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Farmer
-	title = Farmer
-	desc = More than just a botanist, farmers specialize in the more advanced, diversified food production required by advanced agriculture modules.  They contribute to science, as well as Kolonization research.
+	title = #LOC_USI_MKS_AstronautComplex_Farmer
+	desc = #LOC_USI_MKS_AstronautComplex_Farmer_desc
 
 	EFFECT
 	{
@@ -158,8 +158,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Medic
-	title = Medic
-	desc = Medical specialists can help keep your Kerbals healty and happy, as well as perform scientific and Kolonization research.
+	title = #LOC_USI_MKS_AstronautComplex_Medic
+	desc = #LOC_USI_MKS_AstronautComplex_Medic_desc
 
 	EFFECT
 	{
@@ -184,8 +184,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Quartermaster
-	title = Quartermaster
-	desc = Quartermasters specialize in planet-wide logistics, and also contribute to Kolonization research.
+	title = #LOC_USI_MKS_AstronautComplex_Quartermaster
+	desc = #LOC_USI_MKS_AstronautComplex_Quartermaster_desc
 
 	EFFECT
 	{
@@ -205,8 +205,8 @@ EXPERIENCE_TRAIT
 EXPERIENCE_TRAIT
 {
 	name = Scout
-	title = Scout
-	desc = Scouts are the most inquisitive of Kerbal explorers, and what they lack in technical skills they more than make up for in their disregard for safety and tolerance for extremely adverse conditions.
+	title = #LOC_USI_MKS_AstronautComplex_Scout
+	desc = #LOC_USI_MKS_AstronautComplex_Scout_desc
 
 	EFFECT
 	{
