--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Localization/en-us.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Localization/en-us.cfg
@@ -2,7 +2,14 @@ Localization
 {
     en-us
     {
+        // manufacturers
+
+        #LOC_manufacturer_USI = Umbra Space Industries
+        #LOC_manufacturer_USIKD = USI - Kolonization Division
+        #LOC_manufacturer_USIMD = USI - Manufacturing Division
+
         // Part titles
+
         #LOC_USI_DeomlitionBlock_Title = Demolition Charge
         #LOC_USI_Duna_Agriculture_Title = MKS 'Duna' Agriculture Module
         #LOC_USI_Duna_Kolonist_Title = MKS 'Duna' Colonization Module
@@ -219,5 +226,62 @@ Localization
         #LOC_USI_MKS_KolonizationMonitor_OL_Mass = Mass
         #LOC_USI_MKS_KolonizationMonitor_OL_ArT = Arrival Time
         #LOC_USI_MKS_KolonizationMonitor_OL_Stt = Status
+
+        
+        //Astronaut Complex
+
+        #LOC_USI_MKS_AstronautComplex_Recruit = Recruit new Kerbalnaut
+
+        #LOC_USI_MKS_AstronautComplex_NoBulk = Bulk hire Option: You can not hire any more kerbals at this time!
+        #LOC_USI_MKS_AstronautComplex_Bulk = Bulk hire Selector: 
+
+        #LOC_USI_MKS_AstronautComplex_Courage = Courage:  
+        #LOC_USI_MKS_AstronautComplex_Stupidity = Stupidity:  
+        #LOC_USI_MKS_AstronautComplex_isFearless = Is this Kerbal Fearless?
+        #LOC_USI_MKS_AstronautComplex_Fearless = Fearless！
+
+        #LOC_USI_MKS_AstronautComplex_SelectLv = Select Your Level:
+        #LOC_USI_MKS_AstronautComplex_Lv0 = Level 0
+        #LOC_USI_MKS_AstronautComplex_Lv1 = Level 1
+        #LOC_USI_MKS_AstronautComplex_Lv2 = Level 2
+        #LOC_USI_MKS_AstronautComplex_Lv5_Career = Level 5 - Mandatory for Career with no EXP enabled.
+        #LOC_USI_MKS_AstronautComplex_Lv5_Sandbox = Level 5 - Mandatory for Sandbox or Science Mode.
+
+        #LOC_USI_MKS_AstronautComplex_Cost = Cost: 
+        #LOC_USI_MKS_AstronautComplex_InsFunds = Insufficient Funds - Cost: 
+
+        #LOC_USI_MKS_AstronautComplex_Hire = Hire Applicant
+        #LOC_USI_MKS_AstronautComplex_Full = Roster is Full!
+        #LOC_USI_MKS_AstronautComplex_NoFunds = Not Enough Funds!
+
+        #LOC_USI_MKS_AstronautComplex_Male = Male
+        #LOC_USI_MKS_AstronautComplex_Female = Female
+        #LOC_USI_MKS_AstronautComplex_Random = Random
+
+        #LOC_USI_MKS_AstronautComplex_Pilot = Pilot
+        #LOC_USI_MKS_AstronautComplex_Scientist = Scientist
+        #LOC_USI_MKS_AstronautComplex_Engineer = Engineer
+        #LOC_USI_MKS_AstronautComplex_Kolonist = Kolonist
+        #LOC_USI_MKS_AstronautComplex_Kolonist_desc = Kolonists lack the specific technical skills of specialists, but make up for this by being able to boost all Kolonization stats simultaneously.
+        #LOC_USI_MKS_AstronautComplex_Miner = Miner
+        #LOC_USI_MKS_AstronautComplex_Miner_desc = Miners specialize in drill operation and also perform geology research.
+        #LOC_USI_MKS_AstronautComplex_Technician = Technician
+        #LOC_USI_MKS_AstronautComplex_Technician_desc = Technicians can operate industrial colony equipment as well as perform geology research.
+        #LOC_USI_MKS_AstronautComplex_Mechanic = Mechanic
+        #LOC_USI_MKS_AstronautComplex_Mechanic_desc = Mechanics can repair broken equipment as well as perform geology research.
+        #LOC_USI_MKS_AstronautComplex_Biologist = Biologist
+        #LOC_USI_MKS_AstronautComplex_Biologist_desc = Biologists are essential for operating basic agriculture and cultivation modules.  They can also perform scientific research.
+        #LOC_USI_MKS_AstronautComplex_Geologist = Geologist
+        #LOC_USI_MKS_AstronautComplex_Geologist_desc = Geologists are able to operate bulk harvesters such as regolith sifters to extract valuable resources.  They can also perform geology research.
+        #LOC_USI_MKS_AstronautComplex_Farmer = Farmer
+        #LOC_USI_MKS_AstronautComplex_Farmer_desc = More than just a botanist, farmers specialize in the more advanced, diversified food production required by advanced agriculture modules.  They contribute to science, as well as Kolonization research.
+        #LOC_USI_MKS_AstronautComplex_Medic = Medic
+        #LOC_USI_MKS_AstronautComplex_Medic_desc = Medical specialists can help keep your Kerbals healty and happy, as well as perform scientific and Kolonization research.
+        #LOC_USI_MKS_AstronautComplex_Quartermaster = Quartermaster
+        #LOC_USI_MKS_AstronautComplex_Quartermaster_desc = Quartermasters specialize in planet-wide logistics, and also contribute to Kolonization research.
+        #LOC_USI_MKS_AstronautComplex_Scout = Scout
+        #LOC_USI_MKS_AstronautComplex_Scout_desc = Scouts are the most inquisitive of Kerbal explorers, and what they lack in technical skills they more than make up for in their disregard for safety and tolerance for extremely adverse conditions.
+
+
     }
 }
