--- a/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Localization/zh-cn.cfg
+++ b/FOR_RELEASE/GameData/UmbraSpaceIndustries/MKS/Localization/zh-cn.cfg
@@ -2,7 +2,14 @@ Localization
 {
     zh-cn
     {
-        // Part titles
+        // manufacturers 制造商
+
+        #LOC_manufacturer_USI = 暗影太空工业（USI）
+        #LOC_manufacturer_USIKD = USI-殖民分部
+        #LOC_manufacturer_USIMD = USI-生产分部
+
+        // Part titles 部件名称
+
         #LOC_USI_DeomlitionBlock_Title = 爆破装置
         #LOC_USI_Duna_Agriculture_Title = MKS-“杜纳”农业模块
         #LOC_USI_Duna_Kolonist_Title = MKS-“杜纳”殖民模块
@@ -94,7 +101,7 @@ Localization
         #LOC_USI_UKS_PowerBox_Title = 电力耦合器
         #LOC_USI_MKS_FlexOTube_Title = MKS-坎巴拉轨道™柔性管道
 
-        // Part descriptions
+        // Part descriptions 部件简介
 
         #LOC_USI_DeomlitionBlock_Description = 这种爆炸装置可用于分解和回收单个部件、清除连接部件，或摧毁整个航天舱。请勿食用。
         #LOC_USI_Duna_Agriculture_Description = 这个模块为您的殖民地带来了更先进的农业技术。虽然它自身的空间有限，但它可以利用其他更具拓展性的模块，通过各种农业途径来帮助您补充物资。
@@ -187,7 +194,7 @@ Localization
         #LOC_USI_UKS_PowerBox_Description = 允许通过物理电缆来传输电能。
         #LOC_USI_MKS_FlexOTube_Description = 可扩展、可弯曲、可连接的管状通道，长度可达50米。需要KAS模组才能正常使用。
         
-        //Kolonization Monitor 
+        //Kolonization Monitor 殖民地控制面板
 
         #LOC_USI_MKS_KolonizationMonitor_Title = 殖民控制面板
 
@@ -198,7 +205,7 @@ Localization
         #LOC_USI_MKS_KolonizationMonitor_Lable5 = 轨道物资补给
 
         #LOC_USI_MKS_KolonizationMonitor_KS_Lable1 = 星球名称
-        #LOC_USI_MKS_KolonizationMonitor_KS_Lable2 = 地理学研究
+        #LOC_USI_MKS_KolonizationMonitor_KS_Lable2 = 地质学研究
         #LOC_USI_MKS_KolonizationMonitor_KS_Lable3 = 种植学研究
         #LOC_USI_MKS_KolonizationMonitor_KS_Lable4 = 殖民进展  
 
@@ -210,7 +217,7 @@ Localization
         #LOC_USI_MKS_KolonizationMonitor_KI_Res = 资源
         #LOC_USI_MKS_KolonizationMonitor_KI_Ivt = 库存
         #LOC_USI_MKS_KolonizationMonitor_KI_Rate = 速率
-        #LOC_USI_MKS_KolonizationMonitor_KI_Sup = 补充
+        #LOC_USI_MKS_KolonizationMonitor_KI_Sup = 补满或耗尽时间
 
         #LOC_USI_MKS_KolonizationMonitor_OL_PTran = 待处理的运输
         #LOC_USI_MKS_KolonizationMonitor_OL_ETran = 已失效的运输
@@ -221,6 +228,60 @@ Localization
         #LOC_USI_MKS_KolonizationMonitor_OL_Mass = 质量
         #LOC_USI_MKS_KolonizationMonitor_OL_ArT = 到达时间
         #LOC_USI_MKS_KolonizationMonitor_OL_Stt = 状态
-    
+
+        //Astronaut Complex 宇航员之家
+
+        #LOC_USI_MKS_AstronautComplex_Recruit = 招募新宇航员
+
+        #LOC_USI_MKS_AstronautComplex_NoBulk = 批量招募选项：当前无法再招募更多的坎巴拉宇航员！
+        #LOC_USI_MKS_AstronautComplex_Bulk = 批量招募选项：
+
+        #LOC_USI_MKS_AstronautComplex_Courage = 勇敢度：
+        #LOC_USI_MKS_AstronautComplex_Stupidity = 愚蠢度：
+        #LOC_USI_MKS_AstronautComplex_isFearless = 想要无所畏惧的坎巴拉人吗？
+        #LOC_USI_MKS_AstronautComplex_Fearless = 无所畏惧
+
+        #LOC_USI_MKS_AstronautComplex_SelectLv = 选择等级：
+        #LOC_USI_MKS_AstronautComplex_Lv0 = 等级 0
+        #LOC_USI_MKS_AstronautComplex_Lv1 = 等级 1
+        #LOC_USI_MKS_AstronautComplex_Lv2 = 等级 2
+        #LOC_USI_MKS_AstronautComplex_Lv5_Career = 等级 5 - 适用于未启用经验值的生涯模式。
+        #LOC_USI_MKS_AstronautComplex_Lv5_Sandbox = 等级 5 - 适用于沙盒或科研模式。
+
+        #LOC_USI_MKS_AstronautComplex_Cost = 花费：
+        #LOC_USI_MKS_AstronautComplex_InsFunds = 资金不足！ - 花费：
+
+        #LOC_USI_MKS_AstronautComplex_Hire = 招募应聘者
+        #LOC_USI_MKS_AstronautComplex_Full = 人员已满！
+        #LOC_USI_MKS_AstronautComplex_NoFunds = 没有足够的资金！
+
+        #LOC_USI_MKS_AstronautComplex_Male = 男性
+        #LOC_USI_MKS_AstronautComplex_Female = 女性
+        #LOC_USI_MKS_AstronautComplex_Random = 随机性别
+
+        #LOC_USI_MKS_AstronautComplex_Pilot = 飞行员
+        #LOC_USI_MKS_AstronautComplex_Scientist = 科学家
+        #LOC_USI_MKS_AstronautComplex_Engineer = 工程师
+        #LOC_USI_MKS_AstronautComplex_Kolonist = 殖民者
+        #LOC_USI_MKS_AstronautComplex_Kolonist_desc = 殖民者虽然缺乏其他专家的专业技能，但他们能够同时提升所有殖民相关的统计数值，从而弥补了自己的不足。
+        #LOC_USI_MKS_AstronautComplex_Miner = 矿工
+        #LOC_USI_MKS_AstronautComplex_Miner_desc = 矿工专门从事钻探操作，还可以进行地质研究。
+        #LOC_USI_MKS_AstronautComplex_Technician = 技术员
+        #LOC_USI_MKS_AstronautComplex_Technician_desc = 技术员可以操作工业殖民设备，还可以进行地质研究。
+        #LOC_USI_MKS_AstronautComplex_Mechanic = 机械师
+        #LOC_USI_MKS_AstronautComplex_Mechanic_desc = 机械师可以修理损坏的设备，还可以进行地质研究。
+        #LOC_USI_MKS_AstronautComplex_Biologist = 生物学家
+        #LOC_USI_MKS_AstronautComplex_Biologist_desc = 生物学家对于操作基础农业和种植模块至关重要。他们还可以进行科学研究。
+        #LOC_USI_MKS_AstronautComplex_Geologist = 地质学家
+        #LOC_USI_MKS_AstronautComplex_Geologist_desc = 地质学家能够操作如表层筛分机等大规模采集设备来开采有价值的资源。他们还可以进行地质研究。
+        #LOC_USI_MKS_AstronautComplex_Farmer = 农业专家
+        #LOC_USI_MKS_AstronautComplex_Farmer_desc = 农业专家不仅仅是植物学家，他们更擅长高级、多样化食品生产，这对于先进的农业模块至关重要。他们既能参与科学研究，也能助力殖民研究。
+        #LOC_USI_MKS_AstronautComplex_Medic = 医疗专家
+        #LOC_USI_MKS_AstronautComplex_Medic_desc = 医疗专家可以帮助你的坎巴拉人保持健康和快乐，还可以进行科学和殖民研究。
+        #LOC_USI_MKS_AstronautComplex_Quartermaster = 物资管理员
+        #LOC_USI_MKS_AstronautComplex_Quartermaster_desc = 物资管理员擅长处理星球范围内的物资补给工作，同时也能助力殖民研究。
+        #LOC_USI_MKS_AstronautComplex_Scout = 探险家
+        #LOC_USI_MKS_AstronautComplex_Scout_desc = 探险家是坎巴拉人中好奇心最为旺盛的一类，他们虽然在技术能力上有所欠缺，但他们对自身安全的漠视和对极端恶劣环境的耐受能力完全弥补了这一不足。
+
     }
 }
